Logowanie poprawka rejestracji

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -197,4 +197,13 @@ body{
         font-size: 0.8em;
         cursor: pointer;
     }
+    .form-result{
+        padding: 12px 0;
+    }
+    .form-result.success{
+        color: #4ea94e;
+    }
+    .form-result.error{
+        color: #ff6666;
+    }
     input::placeholder{color:#ddd}
